--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/server.js"
   },
   "engines": {
+    "start": "nodemon server/server.js",
     "node": "8.11.1"
   },
   "author": "",
